# gbc-emulator

./: .gitmodules
emulator/: CMakeLists.txt
emulator/gbc-emulator/: CMakeLists.txt  main.c
emulator/lib/: CMakeLists.txt
emulator/tests/: CMakeLists.txt
